--- a/app/src/main/res/layout/activity_hub.xml
+++ b/app/src/main/res/layout/activity_hub.xml
@@ -8,13 +8,170 @@
     <FrameLayout android:id="@+id/container" android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:text="Medium Text"
-            android:id="@+id/textView"
-            android:layout_gravity="center" />
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="#ff656565">
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal">
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:weightSum="1">
+
+                    <ImageView
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:id="@+id/imageView"
+                        android:layout_row="0"
+                        android:layout_column="0"
+                        android:layout_columnSpan="5"
+                        android:layout_rowSpan="5"
+                        android:src="@drawable/buttong"
+                        android:nestedScrollingEnabled="false"
+                        android:padding="10dp"
+                        android:layout_weight="0.05" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:text="Tremors Start"
+                        android:id="@+id/textView2"
+                        android:layout_row="5"
+                        android:layout_column="4"
+                        android:padding="0dp"
+                        android:layout_gravity="center_horizontal"
+                        android:textColor="#ffffffff" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:weightSum="1">
+
+                    <ImageView
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:id="@+id/imageView2"
+                        android:layout_row="0"
+                        android:layout_column="0"
+                        android:layout_columnSpan="5"
+                        android:layout_rowSpan="5"
+                        android:src="@drawable/buttonr"
+                        android:nestedScrollingEnabled="false"
+                        android:padding="10dp"
+                        android:layout_weight="0.05" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:text="Tremors Stop"
+                        android:id="@+id/textView3"
+                        android:layout_row="5"
+                        android:layout_column="4"
+                        android:layout_gravity="center_horizontal"
+                        android:textColor="#ffffffff" />
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal">
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:weightSum="1" >
+
+                    <ImageView
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:id="@+id/imageView3"
+                        android:layout_row="0"
+                        android:layout_column="0"
+                        android:layout_columnSpan="5"
+                        android:layout_rowSpan="5"
+                        android:src="@drawable/buttony"
+                        android:nestedScrollingEnabled="false"
+                        android:padding="10dp"
+                        android:layout_weight="0.05" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:text="Medication"
+                        android:id="@+id/textView4"
+                        android:layout_row="5"
+                        android:layout_column="4"
+                        android:padding="0dp"
+                        android:layout_gravity="center_horizontal"
+                        android:textColor="#ffffffff" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:weightSum="1" >
+
+                    <ImageView
+                        android:layout_width="100dp"
+                        android:layout_height="100dp"
+                        android:id="@+id/imageView4"
+                        android:layout_row="0"
+                        android:layout_column="0"
+                        android:layout_columnSpan="5"
+                        android:layout_rowSpan="5"
+                        android:src="@drawable/buttonb"
+                        android:nestedScrollingEnabled="false"
+                        android:padding="10dp"
+                        android:layout_weight="0.05" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textAppearance="?android:attr/textAppearanceSmall"
+                        android:text="Event"
+                        android:id="@+id/textView5"
+                        android:layout_row="5"
+                        android:layout_column="4"
+                        android:padding="0dp"
+                        android:layout_gravity="center_horizontal"
+                        android:textColor="#ffffffff" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textAppearance="?android:attr/textAppearanceMedium"
+                android:id="@+id/textView"
+                android:layout_gravity="center"
+                android:textColor="#ffffffff"
+                android:background="#ff4f4f4f"
+                android:layout_margin="10dp"
+                android:maxLines="500"
+                android:scrollbars="vertical"
+                />
+
+        </LinearLayout>
+
     </FrameLayout>
 
     <!-- android:layout_gravity="start" tells DrawerLayout to treat
