--- a/app/src/main/res/layout/activity_hub.xml
+++ b/app/src/main/res/layout/activity_hub.xml
@@ -14,6 +14,32 @@
             android:layout_height="match_parent"
             android:background="#ff656565">
 
+            <RelativeLayout
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+                android:paddingTop="5dp">
+
+                <ImageView
+                    android:layout_width="123dp"
+                    android:layout_height="22dp"
+                    android:id="@+id/connectedIcon"
+                    android:src="@android:drawable/button_onoff_indicator_off"
+                    android:layout_gravity="center_horizontal"
+                    android:layout_centerInParent="true" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceMedium"
+                    android:text="Not Connected"
+                    android:id="@+id/connectedText"
+                    android:layout_gravity="center_horizontal"
+                    android:textColor="#ff000000"
+                    android:textSize="16dp"
+                    android:layout_centerInParent="true" />
+
+            </RelativeLayout>
+
             <LinearLayout
                 android:orientation="horizontal"
                 android:layout_width="wrap_content"
