--- a/app/src/main/res/layout/activity_hub.xml
+++ b/app/src/main/res/layout/activity_hub.xml
@@ -3,202 +3,13 @@
     xmlns:tools="http://schemas.android.com/tools" android:id="@+id/drawer_layout"
     android:layout_width="match_parent" android:layout_height="match_parent" tools:context=".Hub">
 
+
     <!-- As the main content view, the view below consumes the entire
          space available using match_parent in both dimensions. -->
-    <FrameLayout android:id="@+id/container" android:layout_width="match_parent"
-        android:layout_height="match_parent" >
-
-        <LinearLayout
-            android:orientation="vertical"
-            android:layout_width="match_parent"
+        <FrameLayout android:id="@+id/container" android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="#ff656565">
+            android:background="#ff656565" />
 
-            <RelativeLayout
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:paddingTop="5dp">
-
-                <ImageView
-                    android:layout_width="123dp"
-                    android:layout_height="22dp"
-                    android:id="@+id/connectedIcon"
-                    android:src="@android:drawable/button_onoff_indicator_off"
-                    android:layout_gravity="center_horizontal"
-                    android:layout_centerInParent="true" />
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Not Connected"
-                    android:id="@+id/connectedText"
-                    android:layout_gravity="center_horizontal"
-                    android:textColor="#ff000000"
-                    android:textSize="16dp"
-                    android:layout_centerInParent="true" />
-
-            </RelativeLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal">
-
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:weightSum="1">
-
-                    <ImageView
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:id="@+id/imageView"
-                        android:layout_row="0"
-                        android:layout_column="0"
-                        android:layout_columnSpan="5"
-                        android:layout_rowSpan="5"
-                        android:src="@drawable/buttong"
-                        android:nestedScrollingEnabled="false"
-                        android:padding="10dp"
-                        android:layout_weight="0.05" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:text="Tremors Start"
-                        android:id="@+id/textView2"
-                        android:layout_row="5"
-                        android:layout_column="4"
-                        android:padding="0dp"
-                        android:layout_gravity="center_horizontal"
-                        android:textColor="#ffffffff" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:weightSum="1">
-
-                    <ImageView
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:id="@+id/imageView2"
-                        android:layout_row="0"
-                        android:layout_column="0"
-                        android:layout_columnSpan="5"
-                        android:layout_rowSpan="5"
-                        android:src="@drawable/buttonr"
-                        android:nestedScrollingEnabled="false"
-                        android:padding="10dp"
-                        android:layout_weight="0.05" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:text="Tremors Stop"
-                        android:id="@+id/textView3"
-                        android:layout_row="5"
-                        android:layout_column="4"
-                        android:layout_gravity="center_horizontal"
-                        android:textColor="#ffffffff" />
-
-                </LinearLayout>
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal">
-
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:weightSum="1" >
-
-                    <ImageView
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:id="@+id/imageView3"
-                        android:layout_row="0"
-                        android:layout_column="0"
-                        android:layout_columnSpan="5"
-                        android:layout_rowSpan="5"
-                        android:src="@drawable/buttony"
-                        android:nestedScrollingEnabled="false"
-                        android:padding="10dp"
-                        android:layout_weight="0.05" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:text="Medication"
-                        android:id="@+id/textView4"
-                        android:layout_row="5"
-                        android:layout_column="4"
-                        android:padding="0dp"
-                        android:layout_gravity="center_horizontal"
-                        android:textColor="#ffffffff" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:orientation="vertical"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:weightSum="1" >
-
-                    <ImageView
-                        android:layout_width="100dp"
-                        android:layout_height="100dp"
-                        android:id="@+id/imageView4"
-                        android:layout_row="0"
-                        android:layout_column="0"
-                        android:layout_columnSpan="5"
-                        android:layout_rowSpan="5"
-                        android:src="@drawable/buttonb"
-                        android:nestedScrollingEnabled="false"
-                        android:padding="10dp"
-                        android:layout_weight="0.05" />
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textAppearance="?android:attr/textAppearanceSmall"
-                        android:text="Event"
-                        android:id="@+id/textView5"
-                        android:layout_row="5"
-                        android:layout_column="4"
-                        android:padding="0dp"
-                        android:layout_gravity="center_horizontal"
-                        android:textColor="#ffffffff" />
-                </LinearLayout>
-            </LinearLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:id="@+id/textView"
-                android:layout_gravity="center"
-                android:textColor="#ffffffff"
-                android:background="#ff4f4f4f"
-                android:layout_margin="10dp"
-                android:maxLines="500"
-                android:scrollbars="vertical"
-                />
-
-        </LinearLayout>
-
-    </FrameLayout>
 
     <!-- android:layout_gravity="start" tells DrawerLayout to treat
          this as a sliding drawer on the left side for left-to-right
@@ -212,5 +23,7 @@
         android:layout_gravity="start"
         android:name="com.bamboomobilehealth.marufino.pdwearable.NavigationDrawerFragment"
         tools:layout="@layout/fragment_navigation_drawer" />
+
+
 
 </android.support.v4.widget.DrawerLayout>
