--- a/app/src/main/res/layout/fragment_buttons.xml
+++ b/app/src/main/res/layout/fragment_buttons.xml
@@ -9,56 +9,29 @@
     <TextView android:id="@+id/section_label" android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
-    <!-- As the main content view, the view below consumes the entire
-         space available using match_parent in both dimensions. -->
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="#ff656565">
-
-        <RelativeLayout
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content"
-            android:paddingTop="5dp">
-
-            <ImageView
-                android:layout_width="123dp"
-                android:layout_height="22dp"
-                android:id="@+id/connectedIcon"
-                android:src="@android:drawable/button_onoff_indicator_off"
-                android:layout_gravity="center_horizontal"
-                android:layout_centerInParent="true" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="?android:attr/textAppearanceMedium"
-                android:text="Not Connected"
-                android:id="@+id/connectedText"
-                android:layout_gravity="center_horizontal"
-                android:textColor="#ff000000"
-                android:textSize="16dp"
-                android:layout_centerInParent="true" />
-
-        </RelativeLayout>
+        android:background="#ff656565" >
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal">
+            android:layout_gravity="center_horizontal" >
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:weightSum="1">
+                android:weightSum="1"
+                android:padding="30dp">
 
                 <ImageView
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:id="@+id/imageView"
+                    android:id="@+id/imageView6"
                     android:layout_row="0"
                     android:layout_column="0"
                     android:layout_columnSpan="5"
@@ -68,29 +41,25 @@
                     android:padding="10dp"
                     android:layout_weight="0.05" />
 
-                <TextView
-                    android:layout_width="wrap_content"
+                <Spinner
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="Tremors Start"
-                    android:id="@+id/textView2"
-                    android:layout_row="5"
-                    android:layout_column="4"
-                    android:padding="0dp"
+                    android:id="@+id/greenspinner"
                     android:layout_gravity="center_horizontal"
-                    android:textColor="#ffffffff" />
+                    android:background="#ffa0a0a0" />
             </LinearLayout>
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:weightSum="1">
+                android:weightSum="1"
+                android:padding="30dp">
 
                 <ImageView
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:id="@+id/imageView2"
+                    android:id="@+id/imageView7"
                     android:layout_row="0"
                     android:layout_column="0"
                     android:layout_columnSpan="5"
@@ -100,37 +69,32 @@
                     android:padding="10dp"
                     android:layout_weight="0.05" />
 
-                <TextView
-                    android:layout_width="wrap_content"
+                <Spinner
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="Tremors Stop"
-                    android:id="@+id/textView3"
-                    android:layout_row="5"
-                    android:layout_column="4"
+                    android:id="@+id/redspinner"
                     android:layout_gravity="center_horizontal"
-                    android:textColor="#ffffffff" />
-
+                    android:background="#ffa0a0a0" />
             </LinearLayout>
-
         </LinearLayout>
 
         <LinearLayout
             android:orientation="horizontal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal">
+            android:layout_gravity="center_horizontal" >
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:weightSum="1" >
+                android:weightSum="1"
+                android:padding="30dp">
 
                 <ImageView
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:id="@+id/imageView3"
+                    android:id="@+id/imageView8"
                     android:layout_row="0"
                     android:layout_column="0"
                     android:layout_columnSpan="5"
@@ -140,29 +104,25 @@
                     android:padding="10dp"
                     android:layout_weight="0.05" />
 
-                <TextView
-                    android:layout_width="wrap_content"
+                <Spinner
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="Medication"
-                    android:id="@+id/textView4"
-                    android:layout_row="5"
-                    android:layout_column="4"
-                    android:padding="0dp"
+                    android:id="@+id/yellowspinner"
                     android:layout_gravity="center_horizontal"
-                    android:textColor="#ffffffff" />
+                    android:background="#ffa0a0a0" />
             </LinearLayout>
 
             <LinearLayout
                 android:orientation="vertical"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:weightSum="1" >
+                android:weightSum="1"
+                android:padding="30dp">
 
                 <ImageView
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:id="@+id/imageView4"
+                    android:id="@+id/imageView9"
                     android:layout_row="0"
                     android:layout_column="0"
                     android:layout_columnSpan="5"
@@ -172,33 +132,19 @@
                     android:padding="10dp"
                     android:layout_weight="0.05" />
 
-                <TextView
-                    android:layout_width="wrap_content"
+                <Spinner
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceSmall"
-                    android:text="Event"
-                    android:id="@+id/textView5"
-                    android:layout_row="5"
-                    android:layout_column="4"
-                    android:padding="0dp"
+                    android:id="@+id/bluespinner"
                     android:layout_gravity="center_horizontal"
-                    android:textColor="#ffffffff" />
+                    android:background="#ffa0a0a0" />
             </LinearLayout>
         </LinearLayout>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:id="@+id/textView"
-            android:layout_gravity="center"
-            android:textColor="#ffffffff"
-            android:background="#ff4f4f4f"
-            android:layout_margin="10dp"
-            android:maxLines="500"
-            android:scrollbars="vertical"
-            />
-
     </LinearLayout>
+
+    <!-- As the main content view, the view below consumes the entire
+         space available using match_parent in both dimensions. -->
+
 
 </RelativeLayout>
