--- a/app/src/main/res/layout/fragment_buttons.xml
+++ b/app/src/main/res/layout/fragment_buttons.xml
@@ -26,7 +26,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:weightSum="1"
-                android:padding="30dp">
+                android:padding="30dp"
+                android:textAlignment="viewStart">
 
                 <ImageView
                     android:layout_width="100dp"
@@ -45,8 +46,8 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:id="@+id/greenspinner"
-                    android:layout_gravity="center_horizontal"
-                    android:background="#ffa0a0a0" />
+                    android:background="#ffa0a0a0"
+                    android:spinnerMode="dialog" />
             </LinearLayout>
 
             <LinearLayout
